--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,29 +1,11 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-.container-fluid {
-  padding: 0;
-}
-
-.navbar-header h4{
-  padding: 0;
-  color: white;
-}
-
-.navbar-nav {
-  flex-direction: row;
-}
-
 .save-note {
-  color: white;
+  display: none;
 }
 
 .icons i {
@@ -33,11 +15,7 @@ html, body {
   cursor: pointer;
 }
 
-.jumbotron {
-  text-align: center;
-}
-
-.note-journal, .note-textarea, .note-title, .note-text {
+.note-textarea, .note-title {
   color: #000000;
   width: 100%;
   outline: none;
@@ -50,18 +28,14 @@ html, body {
   padding-top: 15px;
 }
 
-.note-journal,.note-text {
-  resize: none;
-}
-
 .note-title {
   height: 50px;
   margin-top: 13px;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 .note-title:read-only, .note-textarea:read-only {
-  color: #777676;
+  color: #757575;
 }
 
 .list-container .card {
@@ -84,7 +58,6 @@ html, body {
 }
 
 .list-container i {
-  float: right;
   font-size: 1.1rem;
   cursor: pointer;
 }
